# duolingo-for-coding

./: README.md
.github/workflows/: rust_ci.yml
backend/: .env  Cargo.toml  all_databases.sql  endpoints.md  rust_Db.sql
backend/src/: database.rs  main.rs  models.rs  server.rs
backend/src/models/: answer.rs  task.rs  user.rs
frontend/: .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/.next/: build-manifest.json  trace
frontend/.next/cache/eslint/: .cache_1g9v1gf
frontend/.next/cache/webpack/client-development/: index.pack.gz.old
frontend/.next/cache/webpack/client-production/: 1.pack  10.pack  11.pack  12.pack  13.pack  14.pack  15.pack  16.pack  17.pack  19.pack  2.pack  20.pack  21.pack  22.pack  23.pack  24.pack  3.pack  4.pack  5.pack  6.pack  7.pack  8.pack  9.pack  index.pack  index.pack.old
frontend/.next/server/: middleware-build-manifest.js  pages-manifest.json
frontend/.next/server/pages/: _app.js  _error.js  course.js  index.js  my-account.js
frontend/.next/server/vendor-chunks/: @swc.js  next.js
frontend/.next/static/chunks/: webpack.js
frontend/.next/static/chunks/pages/: _app.js  (+3 more)
frontend/.next/static/development/: _buildManifest.js
frontend/.next/static/webpack/: webpack.cc67550019ef5dcf.hot-update.js  webpack.de14469d7e97af2e.hot-update.js
frontend/public/: app.webmanifest
frontend/src/: App.tsx
frontend/src/Components/Assets/: figma.txt
frontend/src/Components/Auth/: ReCaptchaScreen.css  ReCaptchaScreen.tsx
frontend/src/Components/LoginSignup/: LoginSignup.css  LoginSignup.tsx
frontend/src/components/: BottomBar.tsx  Flag.tsx  LanguageDropDown.tsx  LanguageHeader.tsx  LeftBar.tsx  LoginScreen.tsx  RightBar.tsx  SettingsRightNav.tsx  Svgs.tsx  TopBar.tsx
frontend/src/pages/: _app.tsx  course.tsx  forgot-password.tsx  index.tsx  lesson.tsx  my-account.tsx  register.tsx
frontend/src/pages/settings/: account.tsx  sound.tsx
frontend/src/services/: LoginSignup.txt  authService.ts  backendService.ts
frontend/src/stores/: createLanguageStore.ts
frontend/src/utils/: backendComm.ts  backendUtils.ts  languages.ts  taskData.ts  units.ts  userData.ts
(+21 files in other folders)
