[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5" # For REST API
reqwest = { version = "0.12", features = ["json"] } # For HTTP requests
tokio = { version = "1", features = ["full"] } # For async
serde_json = "1.0" # For serialization
mongodb = "2.8.2" # For MongoDB
