[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5" # For REST API
actix-web = "4.0.0-beta.8" # For REST API (alternative)
reqwest = { version = "0.12", features = ["json"] } # For HTTP requests
tokio = { version = "1", features = ["full"] } # For async
serde_json = "1.0" # For serialization
serde = {"version" = "1.0", features = ["derive"]} # For serialization
mongodb = "2.8.2" # For MongoDB
uuid = "1.8.0"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "mysql"] }
bcrypt = "0.15" # For password hashing