[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5" # For REST API
tower-http = {"version" = "0.5.2", features = ["cors"]}
reqwest = { version = "0.12", features = ["json"] } # For HTTP requests
tokio = { version = "1", features = ["full"] } # For async
serde_json = "1.0" # For serialization
serde = {"version" = "1.0", features = ["derive"]} # For serialization
bcrypt = "0.15" # For password hashing
regex = "1.10.5"
serde_with = "3.8.1"
dotenvy = "0.15.7"
sqlx = {"version" = "0.7.4", features = ["runtime-tokio", "macros", "mysql", "chrono"]}
chrono = "0.4.38"
uuid = {"version" = "1.10.0", "features" = ["v4", "serde"]}
pico-args = {"version" = "0.5.0", features = ["eq-separator", "short-space-opt"]}
# Logging
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
http = "1.1.0"
rand = "0.8.5"

